wwr/styles/rafting.css
:root {
    --primary-picton-blue: rgb(54, 162, 217);
    --secondary-delft-blue: rgb(30, 50, 87);
    --accent-white-smoke: #F5F3F5;
    --accent-hunyadi-yellow: #F6AE2D;
}

* {
    box-sizing: border-box;
}

header,
main,
footer {
    max-width: 800px;
}

header {
    display: grid;
    grid-template-columns: 5fr 7fr;
    background-color: var(--accent-hunyadi-yellow);
    padding-top: 15px;
    padding-bottom: 15px;
    border: 1px var(--secondary-delft-blue) solid;
}

.logo {
    width: 120px;
    margin: auto;
}

.menu {
    display: flex;
    align-items: center;
    justify-content: center;
}

.menu-button {
    text-decoration: none;
    color: var(--secondary-delft-blue);
    background-color: var(--accent-white-smoke);
    border: 1px var(--primary-picton-blue) solid;
    padding-left: 16px;
    padding-right: 16px;
    line-height: 30px;
}

.hero {
    display: block;
    position: relative;
    margin-bottom: 10px;
}

.view-trips-button {
    text-decoration: none;
    color: var(--accent-white-smoke);
    position: absolute;
    font-size: 36px;
    font-family: "Racing Sans One";
    border: 5px solid var(--accent-white-smoke);
    border-radius: 7px;
    background-color: var(--secondary-delft-blue);
    padding: 10px;
    left: 50%;
    margin-left: -100px;
    min-width: 201px;
    width: 201px;
    top: 200px;
    /* fix this for vertical centering */

}

.heading1 {
    top: 5px;
    left: 100px;
    color: var(--accent-white-smoke);
    font-family: "Racing Sans One";
    font-size: 48px;
    position: absolute;
}

.home-heading1 {
    top: 5px;
    left: 50%;
    margin-left: -250px;
    color: var(--accent-white-smoke);
    font-family: "Racing Sans One";
    font-size: 56px;
    position: absolute;
}

.staff-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 3fr;
    max-width: 600px;
    margin-top: 20px;
    grid-gap: 10px;
}

.trip-figure>figcaption {
    font-family: "STIX Two Text";
    font-weight: bold;
}

.trip-caption {
    text-wrap: wrap;
    font-family: "STIX Two Text";
}

.popular-trips-grid {
    display: flex;
    flex-flow: row wrap;
    row-gap: 5px;
    justify-content: space-around;
    max-width: 800px;
    margin-top: 10px;
    column-gap: 15px;
}

.trips-table {
    margin-top: 25px;
    border-collapse: collapse;
    border: 2px solid var(--secondary-delft-blue);
}

.trips-table>th,
td {
    border: 1px solid var(--secondary-delft-blue);
}

.trips-table>td,
th {
    border: 1px solid var(--secondary-delft-blue);
}

.schedule-now-figure {
    position: relative;
}

.schedule-caption {
    text-decoration: none;
    color: black;
    position: absolute;
    bottom: 45px;
    left: 25px;
    font-size: 20px;
    font-weight: bold;
}

.employee-figure {
    margin: 0;
}

.employee-figure img {
    width: 100%;
}

.hear-from-you-heading {
    font-family: "STIX Two Text";
    color: black;
    font-size: 30px;
    margin-left: 20px;
    grid-column: 1/3;
}

.popular-trips-heading {
    font-family: "STIX Two Text";
    color: black;
    font-size: 30px;
    margin-left: 20px;
}

.employee-figure:nth-of-type(1) {
    grid-row: 2/3;
}

.employee-figure:nth-of-type(2) {
    grid-row: 2/3;
}

.employee-figure:nth-of-type(3) {
    grid-row: 2/3;
}

.fig-caption {
    justify-items: center;
}

form {
    margin-top: 30px;
    font-family: "STIX Two Text";
}

form>fieldset>legend {
    font-size: 24px;
    font-family: "STIX Two Text";
}

form>label,
input,
textarea {
    margin-top: 10px;
    margin-bottom: 20px;
}

form>fieldset>textarea {
    min-width: 600px;
    max-width: 100%;
}

.choice {
    display: inline;
}

.contactrips-heading1 {
    margin: 0 auto;
    background-color: var(--secondary-delft-blue);
    line-height: 100px;
    font-family: "Racing Sans One";
    color: var(--accent-white-smoke);
    text-align: center;
    font-size: 52px;
}

.company-information {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    margin-top: 0px;
    grid-gap: 15px;
    text-align: left;
    font-family: "STIX Two Text";
}

.contact-info {
    margin-top: 5px;
}

.map-section {
    margin-top: 40px;
}

.article1 {
    top: 170px;
    left: 50px;
    color: var(--accent-white-smoke);
    font-family: "STIX Two Text";
    font-size: 20px;
    position: absolute;
    background-color: rgba(30, 50, 87, 0.85);
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 10px;
    padding-right: 10px;
    max-width: 600px;
}

.image1 {
    float: right;
}

.blank-section {
    clear: both;
    padding: 1px;
}

.history-section {
    border: 2px var(--secondary-delft-blue) solid;
    clear: both;
    padding-bottom: 10px;
}

.history-heading {
    text-align: center;
    line-height: 10px;
    margin-bottom: 12px;
}

.history-grid {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.history {
    padding-left: 15px;
    font-family: "STIX Two Text";
}

.adventure-section {
    margin-top: 16px;
    border: 2px var(--secondary-delft-blue) solid;
}

.offerings-section {
    margin-top: 16px;
}

.adventure-heading {
    text-align: center;
}

.adventure-div {
    max-width: 800px;
    display: flex;
}

.offerings-div {
    clear: both;
    max-width: 800px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 2px;
}

.adventure-figure {
    margin: 15px;
}

.offerings-figure {
    margin: 15px;
    width: 100%;
    position: relative;
}

.offerings-figure img {
    /* width: 100%; */
    min-width: 0;
    width: 100%;
    border-radius: 5px;
}

.offerings-caption {
    position: absolute;
    top: 75%;
    left: 5%;
    font-size: 2rem;
    font-family: "STIX Two Text";
    font-weight: bold;
    color: var(--accent-white-smoke);
    background-color: rgba(30, 50, 87, 0.85);
    padding: 5px;
}

.adventure-figure img {
    width: 100%;
}

.oars-figure {
    width: 100%;
}

.oars-figure img {
    width: 70%;
}

.caption {
    font-family: "STIX Two Text";
    text-align: center;
}

.newsletter-container {
    position: relative;
}

.newsletter-form {
    width: 40%;
    position: absolute;
    top: 10px;
    left: 60%;
    background-color: var(--primary-picton-blue);
    padding: 5px;
}

.newsletter-legend {
    font-family: "Racing Sans One";
    padding-bottom: 10px;
}

.newsletter-entry {
    padding-top: 5px;
    padding-bottom: 5px;
}

.signup-button {
    align-content: center;
    padding: 5px;
    letter-spacing: 1.1px;
    font-family: "Racing Sans One";
    border: 2px solid var(--secondary-delft-blue);
    border-radius: 2px;
    font-size: 16px;
    display: block;
    margin: auto;
}

footer {
    text-align: center;
    display: grid;
    grid-template-columns: 5fr 1fr;
}

.sociallinks {
    display: flex;
    text-decoration: none;
    justify-content: center;
    align-items: center;
}

.logo2 {
    width: 28px;
    height: 28px;
    margin-left: 4px;
}

.logo2:first-of-type {
    width: 25px;
    height: 25px;
}

h2 {
    font-family: "Racing Sans One";
    color: var(--secondary-delft-blue);
}

